--- a/index.html
+++ b/index.html
@@ -20,31 +20,79 @@
         >
             <a-assets>
                 <a-asset-item
-                    id="animated-asset"
+                    id="animated-asset1"
                     src="assets/asset.gltf"
+                ></a-asset-item>
+                <a-asset-item
+                    id="animated-asset2"
+                    src="assets/asset2.gltf"
+                ></a-asset-item>
+                <a-asset-item
+                    id="animated-asset3"
+                    src="assets/asset3.gltf"
                 ></a-asset-item>
             </a-assets>
 
             <a-marker
-                id="animated-marker"
+                id="animated-marker1"
                 type="pattern"
                 preset="custom"
                 url="assets/marker.patt"
                 raycaster="objects: .clickable"
                 emitevents="true"
                 cursor="fuse: false; rayOrigin: mouse;"
-                id="markerA"
+                id="marker1"
             >
                 <a-entity
-                    id="bowser-model"
-                    scale="0.8866390294386723 0.8866390294386723 0.8866390294386723"
+                    id="bowser-model1"
+                    scale="1.5 1.5 1.5"
                     animation-mixer="loop: repeat"
-                    gltf-model="#animated-asset"
+                    gltf-model="#animated-asset1"
                     class="clickable"
                     gesture-handler
                 ></a-entity>
             </a-marker>
 
+            <a-marker
+                id="animated-marker2"
+                type="pattern"
+                preset="custom"
+                url="assets/marker2.patt"
+                raycaster="objects: .clickable"
+                emitevents="true"
+                cursor="fuse: false; rayOrigin: mouse;"
+                id="marker2"
+            >
+                <a-entity
+                    id="bowser-model2"
+                    scale="1.0 1.0 1.0"
+                    animation-mixer="loop: repeat"
+                    gltf-model="#animated-asset2"
+                    class="clickable"
+                    gesture-handler
+                ></a-entity>
+            </a-marker>            
+
+            <a-marker
+                id="animated-marker3"
+                type="pattern"
+                preset="custom"
+                url="assets/marker3.patt"
+                raycaster="objects: .clickable"
+                emitevents="true"
+                cursor="fuse: false; rayOrigin: mouse;"
+                id="marker3"
+            >
+                <a-entity
+                    id="bowser-model3"
+                    scale="1.0 1.0 1.0"
+                    animation-mixer="loop: repeat"
+                    gltf-model="#animated-asset3"
+                    class="clickable"
+                    gesture-handler
+                ></a-entity>
+            </a-marker>
+            
             <a-entity camera></a-entity>
         </a-scene>
     </body>
